--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,6 +24,7 @@ subjects:
 - !lcsh 'Medicine'
 - !lcsh 'Medicine, Popular'
 - !lcc 'RC'
+- GITenberg
 tableOfContents: "First aid in emergencies, by K. Winslow assisted by A.W. Ferris\r\
   \nGerm diseases, by K. Winslow"
 title: The Home Medical Library, Volume 1 (of 6)
